5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4429/executions/1594_2425.log
== TEST (2019-03-29 17:05:52) 
-- CODE:
distancia=float(input("digite km: "))
litro=float(input("digite L: "))
consumo medio=(distancia/litro)
print(round(consumo medio, 3("km/l"))
-- ERROR:
File "XXXX", line 3
    consumo medio=(distancia/litro)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:07:39) 
-- CODE:
distancia=float(input("digite km: "))
litro=float(input("digite L: "))
consumo medio=((distancia/litro))
print(round(consumo medio, 3("km/l"))
-- ERROR:
File "XXXX", line 3
    consumo medio=((distancia/litro))
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:08:49) 
-- CODE:
distancia=float(input("digite km: "))
litro=float(input("digite L: "))
consumo=(distancia/litro)
print(round(consumo medio, 3("km/l"))
-- ERROR:
File "XXXX", line 4
    print(round(consumo medio, 3("km/l"))
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:09:08) 
-- CODE:
distancia=float(input("digite km: "))
litro=float(input("digite L: "))
consumo=(distancia/litro)
print(round(consumo, 3("km/l"))
-- ERROR:
File "XXXX", line 5
    
                                   ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:09:44) 
-- CODE:
distancia=float(input("digite km: "))
litro=float(input("digite L: "))
consumo=(distancia/litro)
print(round(consumo, 3)("km/l"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(consumo, 3)("km/l"))
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:10:24) 
-- CODE:
distancia=float(input("digite km: "))
litro=float(input("digite L: "))
consumo=(distancia/litro)
print(round(consumo, 3"km/l")
-- ERROR:
File "XXXX", line 4
    print(round(consumo, 3"km/l")
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:11:22) 
-- CODE:
distancia=float(input("digite km: "))
litro=float(input("digite L: "))
consumo=(distancia/litro)
round(consumo, 3)
-- ERROR:
File "XXXX", line 4
    print(round(consumo, 3"km/l")
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:12:02) 
-- CODE:
distancia=float(input("digite km: "))
litro=float(input("digite L: "))
consumo=(distancia/litro)
round(consumo, 3)
print(consumo"km/l")
-- ERROR:
File "XXXX", line 5
    print(consumo"km/l")
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:12:44) 
-- CODE:
distancia=float(input("digite km: "))
litro=float(input("digite L: "))
consumo=(distancia/litro)
round(consumo, 3)
print(consumo("km/l"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(consumo("km/l"))
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:13:29) 
-- CODE:
distancia=float(input("digite km: "))
litro=float(input("digite L: "))
consumo=(distancia/litro)
print round(consumo, 3)

-- ERROR:
File "XXXX", line 4
    print round(consumo, 3)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:14:14) 
-- CODE:
distancia=float(input("digite km: "))
litro=float(input("digite L: "))
consumo=(distancia/litro)
print (round (consumo, 3))

-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 17:15:08) 
-- CODE:
distancia=float(input("digite km: "))
litro=float(input("digite L: "))
consumo=(distancia/litro)
print (round (consumo, 3))

-- EXECUTION TIME:
0.191489
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:33:00) 
-- CODE:
distancia=float(input("digite km: "))
litro=float(input("digite L: "))
consumo=(distancia/litro)
print (round (consumo, 3+"km/l"))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print (round (consumo, 3+"km/l"))
TypeError: unsupported operand type(s) for +: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:45:21) 
-- CODE:
distancia=float(input("digite km: "))
litro=float(input("digite L: "))
consumo=(distancia/litro)
print (round(str(consumo, 3"km/l")))

-- ERROR:
File "XXXX", line 4
    print (round(str(consumo, 3"km/l")))
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:45:49) 
-- CODE:
distancia=float(input("digite km: "))
litro=float(input("digite L: "))
consumo=(distancia/litro)
print (round(str(consumo, 3("km/l")))

-- ERROR:
File "XXXX", line 5
    
                                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:45:57) 
-- CODE:
distancia=float(input("digite km: "))
litro=float(input("digite L: "))
consumo=(distancia/litro)
print (round(str(consumo, 3("km/l")))

-- ERROR:
File "XXXX", line 5
    
                                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:46:31) 
-- CODE:
distancia=float(input("digite km: "))
litro=float(input("digite L: "))
consumo=(distancia/litro)
print (round(str(consumo"km/l",3)))

-- ERROR:
File "XXXX", line 4
    print (round(str(consumo"km/l",3)))
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:47:18) 
-- CODE:
distancia=float(input("digite km: "))
litro=float(input("digite L: "))
consumo=(distancia/litro)
print str(round(consumo"km/l",3))

-- ERROR:
File "XXXX", line 4
    print str(round(consumo"km/l",3))
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:47:47) 
-- CODE:
distancia=float(input("digite km: "))
litro=float(input("digite L: "))
consumo=(distancia/litro)
print str(round(consumo,3))

-- ERROR:
File "XXXX", line 4
    print str(round(consumo,3))
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:47:59) 
-- CODE:
distancia=float(input("digite km: "))
litro=float(input("digite L: "))
consumo=(distancia/litro)
print(round(consumo,3))

-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:49:03) 
-- CODE:
distancia=float(input("digite km: "))
litro=float(input("digite L: "))
consumo=(distancia/litro)
print(round(consumo,3))
print(str(consumo"km/l"))

-- ERROR:
File "XXXX", line 5
    print(str(consumo"km/l"))
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:49:22) 
-- CODE:
distancia=float(input("digite km: "))
litro=float(input("digite L: "))
consumo=(distancia/litro)
print(round(consumo,3))
print(consumo"km/l")

-- ERROR:
File "XXXX", line 5
    print(consumo"km/l")
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:49:37) 
-- CODE:
distancia=float(input("digite km: "))
litro=float(input("digite L: "))
consumo=(distancia/litro)
round(consumo,3)
print(consumo"km/l")

-- ERROR:
File "XXXX", line 5
    print(consumo"km/l")
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:49:59) 
-- CODE:
distancia=float(input("digite km: "))
litro=float(input("digite L: "))
consumo=(distancia/litro)
print round(consumo,3)


-- ERROR:
File "XXXX", line 4
    print round(consumo,3)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:50:15) 
-- CODE:
distancia=float(input("digite km: "))
litro=float(input("digite L: "))
consumo=(distancia/litro)
print (round(consumo,3))


-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:58:57) 
-- CODE:
distancia=float(input("digite km: "))
litro=float(input("digite L: "))
consumo=(distancia/litro)
print (round(consumo,3)"km/l")


-- ERROR:
File "XXXX", line 4
    print (round(consumo,3)"km/l")
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:59:24) 
-- CODE:
distancia=float(input("digite km: "))
litro=float(input("digite L: "))
consumo=(distancia/litro)
print (round(consumo,3)+"km/l")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print (round(consumo,3)+"km/l")
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 18:00:10) 
-- CODE:
distancia=float(input("digite km: "))
litro=float(input("digite L: "))
consumo=(distancia/litro)
print (round(consumo,3),"km/l")


-- OUTPUT:
14.286 km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 18:00:22) 
-- CODE:
distancia=float(input("digite km: "))
litro=float(input("digite L: "))
consumo=(distancia/litro)
print (round(consumo,3),"km/l")


-- EXECUTION TIME:
0.123901
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 06:23:15) 
-- CODE:
distancia=float(input("digite km: "))
litro=float(input("digite L: "))
consumo=(distancia/litro)
print (round(consumo,3),"km/l")


-- OUTPUT:
14.286 km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 00:49:50) 
-- CODE:
distancia=float(input("digite km: "))
litro=float(input("digite L: "))
consumo=(distancia/litro)
print (round(consumo,3),"km/l")


-- OUTPUT:
14.286 km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
